--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="error_invalid_email">Invalid email</string>
     <string name="emptyString">""</string>
     <string name="error_invalid_pwd">More then 4 allowed</string>
+    <string name="error_no_internet">No internet connection</string>
 </resources>
